--- a/source/html/index.html
+++ b/source/html/index.html
@@ -10,7 +10,32 @@
 </head>
 
 <body>
-    <h1>WORKS</h1>
+    <header class="header">
+        <nav class="header__navbar">
+            <div class="header__navbar__logo">
+                <img class="header__navbar__logo__image" src="assets/images/logot.png" alt="Callmusic Logo">
+                <div class="header__navbar__logo__title">CallMusic</div>
+            </div>
+            <ul class="header__navbar__menu">
+                <li class="header__navbar__menu__item header__navbar__menu__item--active"><a href="#">Início</a></li>
+                <li class="header__navbar__menu__item"><a href="#">Generos</a></li>
+                <li class="header__navbar__menu__item"><a href="#">Bandas</a></li>
+                <li class="header__navbar__menu__item"><a href="#">Sobre</a></li>
+                <li class="header__navbar__menu__item"><a href="#">CallMusic</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="section">
+        <aside>
+
+        </aside>
+        <main>
+            <article>
+
+            </article>
+        </main>
+    </section>
 </body>
 
 </html>
